# genesisCode

./: .gitattributes  .gitignore  404.qmd  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  _quarto.yml  deny.toml  feature_matrix.md  genesis.compatibility.json  genesis.dependency-mirror.json  genesis.gates.json  genesis.prerequisites.json  genesis.version-surfaces.json  genesis.workspace.toml  genesisCode.md  index.qmd  llms.txt  package-lock.json  package.json  rust-toolchain.toml  upgrade_plan.md
crates/gc_cli/: Cargo.toml
crates/gc_cli/src/: main.rs  main_parity.rs
crates/gc_cli/tests/: agent_authoring_bundle_guard.rs  ai_iteration_slo_regression.rs  ai_stress_suite_fault_inject.rs  changed_fast_perf_regressions.rs  ci_workflow_coverage.rs  cli_agent_benchmark_run.rs  cli_agent_benchmark_scoring.rs  cli_agent_index.rs  cli_agent_plan.rs  cli_agent_session.rs  cli_agent_task_benchmarks.rs  cli_apply_patch_determinism.rs  cli_canonical_language_examples.rs  cli_cli_schema.rs  cli_commit.rs  cli_compiled_backend.rs  cli_coreform_frontend_profile.rs  cli_debug.rs  cli_determinism_artifacts.rs  cli_diagnostic_goldens.rs  cli_diagnostics_matrix.rs  cli_differential_adversarial.rs  cli_eval_engine.rs  cli_explain_engine.rs  cli_failures.rs  cli_fmt_engine.rs  cli_gc.rs  cli_gcpm_selfhost_acceptance.rs  cli_genesisbench_construct_validity.rs  cli_genesisbench_front_door.rs  cli_genesisbench_registry.rs  cli_gfx_demos.rs  cli_gpk_determinism.rs  cli_gpk_snapshot_kinds.rs  cli_human_diagnostics.rs  cli_json_and_exit.rs  cli_json_schema_registry.rs  cli_mcp.rs  cli_pack_test_engine.rs  cli_pkg_abi.rs  (+61 more)
crates/gc_cli_driver/: Cargo.toml
crates/gc_cli_driver/src/: agent_session.rs  cli_args.rs  cli_json.rs  cli_schema.rs  cmd_agent_index.rs  cmd_agent_index_open_agent.rs  cmd_agent_lookup.rs  cmd_agent_plan.rs  cmd_agent_task_cards.rs  cmd_bench.rs  cmd_bench_open_agent.rs  cmd_commit.rs  cmd_core.rs  cmd_debug.rs  cmd_gc.rs  cmd_pkg.rs  cmd_policy.rs  cmd_refs.rs  cmd_registry.rs  cmd_security_ops.rs  cmd_selfhost.rs  cmd_selfhost_artifact.rs  cmd_selfhost_helpers.rs  cmd_source.rs  cmd_store.rs  cmd_sync.rs  cmd_vcs.rs  cmd_vcs_hash.rs  cmd_vcs_render.rs  commit_contract.rs  diagnostics.rs  gc_contract.rs  host_bridge_runtime.rs  host_bridge_runtime_host_abi.rs  host_bridge_runtime_net_http_ws.rs  host_bridge_runtime_tests.rs  kernel_exec.rs  lib.rs  lib_tests.rs  package_obligation_cmds.rs  (+50 more)
crates/gc_cli_driver_parity/: Cargo.toml
crates/gc_coreform/: Cargo.toml
crates/gc_coreform/src/: canon.rs  fixed_decimal.rs  lib.rs  parse.rs  print.rs  term.rs  tests.rs
crates/gc_coreform/tests/: canon_selfhost_patch_schema.rs  canon_selfhost_stage1_v1.rs  diag_patch_refactor.rs  fuzz_parse_print.proptest-regressions  fuzz_parse_print.rs  selfhost_canon_gc_is_canonicalizable.rs  selfhost_cli_coreform_v1_is_canonicalizable.rs  selfhost_cli_reachability_v1_is_canonicalizable.rs
crates/gc_effects/: Cargo.toml
crates/gc_effects/src/: error.rs  lib.rs  lock.rs  log.rs  policy.rs  policy_parse.rs  policy_tests.rs  refs.rs  runner.rs  runner_browser_host.rs  runner_cap_gc_gpk_low.rs  runner_cap_pkg_low.rs  runner_cap_refs.rs  runner_cap_store.rs  runner_cap_vcs_low.rs  runner_capability_dispatch.rs  runner_capability_dispatch_tests.rs  runner_editor_host.rs  runner_editor_task_registry.rs  runner_editor_task_workflows.rs  runner_editor_tasks.rs  runner_editor_watch.rs  runner_ffi_schema.rs  runner_gc_ops.rs  runner_gc_payload.rs  runner_gfx_host.rs  runner_gpk_payload.rs  runner_gpu_backend_policy.rs  runner_gpu_device_backend.rs  runner_gpu_host.rs  runner_host_bridge.rs  runner_host_bridge_persistent.rs  runner_host_bridge_policy.rs  runner_host_bridge_tests.rs  runner_host_bridge_wasi.rs  runner_io_ops.rs  runner_pkg_payload.rs  runner_plugin_schema.rs  runner_process_control.rs  runner_refs_ops.rs  (+18 more)
crates/gc_effects/tests/: editor_bridge.rs  fuzz_log.rs  gfx_gpu_bridge.rs  host_abi_surface.rs  host_bridge_fault_injection.rs  io_write_security.rs  low_level_wrapper_conformance.rs  refs_caps.rs  refs_signature_gate.rs  store_caps.rs  sync_registry.rs  sync_registry_cases_a.rs  task_concurrency_stress.rs  untrusted_agent_safety.rs
crates/gc_kernel/: Cargo.toml
crates/gc_kernel/src/: compiled.rs  compiled_blob.rs  compiled_compile.rs  compiled_coverage.rs  cycle.rs  env.rs  error.rs  eval.rs  eval_coverage.rs  eval_decimal_ops.rs  eval_forms.rs  eval_prims.rs  eval_treewalk.rs  eval_value_ops.rs  fallible_alloc.rs  free_vars.rs  lib.rs  logical_heap.rs  tests.rs  value.rs
crates/gc_obligations/: Cargo.toml
crates/gc_obligations/src/: error.rs  frontend.rs  lib.rs  manifest.rs  obligation_cache.rs  obligation_eval_helpers.rs  obligation_exec.rs  obligation_exec_budgets.rs  obligation_exec_coverage.rs  obligation_exec_coverage_profile_tests.rs  obligation_exec_replay.rs  obligation_exec_tests.rs  obligation_gfx.rs  obligation_lint.rs  obligation_stage.rs  registry_policy.rs  signing.rs  store.rs  transparency.rs  verify.rs
crates/gc_opt/: Cargo.toml
crates/gc_opt/src/: lib.rs  lib_tests.rs  pure_egg.rs  stage2_wasm.rs
crates/gc_opt/tests/: fuzz_optimizer.rs
crates/gc_patches/: Cargo.toml
crates/gc_patches/src/: lib.rs  patch_apply.rs  patch_apply_report.rs  patch_manifest.rs  patch_parse.rs  patch_refactor.rs  patch_replace.rs  patch_selfhost_toolchain.rs  patch_semantic.rs
crates/gc_patches/tests/: fuzz_patch.rs  patch_matrix.rs  patch_matrix_migrate_contract_signature.rs
crates/gc_pkg/: Cargo.toml
crates/gc_pkg/src/: lib.rs  lock.rs  manifest.rs  module_semantics.rs  workspace.rs
crates/gc_prelude/: Cargo.toml  build.rs
crates/gc_prelude/src/: lib.rs  prelude.rs  prelude_contract_effect.rs  prelude_coreform_api.rs  selfhost_compiled_cache.rs  selfhost_coreform_manifest.rs  (+2 more)
crates/gc_registry/: Cargo.toml
crates/gc_runtime_bench/: Cargo.toml
crates/gc_types/: Cargo.toml
crates/gc_vcs/: Cargo.toml
crates/gc_wasi_cli/: Cargo.toml
crates/gc_wasm/: Cargo.toml
tools/genesis-evidence-verifier/: Cargo.toml
(+1547 files in other folders)
