[workspace]
resolver = "2"
members = [
  "crates/gc_coreform",
  "crates/gc_kernel",
  "crates/gc_prelude",
  "crates/gc_effects",
  "crates/gc_registry",
  "crates/gc_pkg",
  "crates/gc_obligations",
  "crates/gc_patches",
  "crates/gc_types",
  "crates/gc_opt",
  "crates/gc_gfx",
  "crates/gc_vcs",
  "crates/gc_wasm",
  "crates/gc_cli_driver",
  "crates/gc_wasi_cli",
  "crates/gc_cli",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
logos = "0.15"
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"
egg = "0.10"
stacker = "0.1"
base64ct = { version = "1", features = ["alloc"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"
wasm-encoder = "0.245"
wasmi = "1.0"

[profile.selfhost-strict]
inherits = "test"
incremental = false
codegen-units = 1
lto = "off"
opt-level = 1
