[package]
name = "gc_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "genesis"
path = "src/main.rs"

[[bin]]
name = "genesis_parity"
path = "src/main_parity.rs"

[features]
default = []
embedded-bootstrap = ["gc_cli_driver/embedded-bootstrap"]

[dependencies]
gc_cli_driver = { path = "../gc_cli_driver" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json.workspace = true
blake3.workspace = true
gc_coreform = { path = "../gc_coreform" }
gc_effects = { path = "../gc_effects" }
gc_vcs = { path = "../gc_vcs" }
