[package]
name = "gc_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
default-run = "genesis"

[[bin]]
name = "genesis"
path = "src/main.rs"

[[bin]]
name = "genesis_parity"
path = "src/main_parity.rs"

[features]
default = ["profile-headless"]
embedded-bootstrap = ["gc_cli_driver/embedded-bootstrap"]
gpu-device-backend = ["gc_cli_driver/gpu-device-backend"]
gfx-desktop-backend = ["gc_cli_driver/gfx-desktop-backend"]
profile-headless = ["gc_cli_driver/profile-headless"]
profile-gpu = ["gc_cli_driver/profile-gpu"]
profile-gfx = ["gc_cli_driver/profile-gfx"]
profile-backend = ["gc_cli_driver/profile-backend"]

[dependencies]
gc_cli_driver = { path = "../gc_cli_driver", default-features = false }
gc_cli_driver_parity = { path = "../gc_cli_driver_parity" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json.workspace = true
sha2.workspace = true
base64ct.workspace = true
blake3.workspace = true
gc_coreform = { path = "../gc_coreform" }
gc_effects = { path = "../gc_effects" }
gc_kernel = { path = "../gc_kernel" }
gc_pkg = { path = "../gc_pkg" }
gc_prelude = { path = "../gc_prelude" }
gc_vcs = { path = "../gc_vcs" }
gc_registry = { path = "../gc_registry" }
