[package]
name = "gc_cli_driver"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = ["profile-headless"]
parity-harness = []
embedded-bootstrap = ["gc_prelude/embedded-bootstrap"]
gpu-device-backend = ["gc_effects/gpu-device-backend"]
gfx-desktop-backend = ["gc_effects/gfx-desktop-backend"]
profile-headless = []
profile-gpu = ["gpu-device-backend"]
profile-gfx = ["gfx-desktop-backend"]
profile-backend = ["gpu-device-backend", "gfx-desktop-backend"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
base64ct.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
wasm-encoder.workspace = true
thiserror.workspace = true
toml.workspace = true
num-traits.workspace = true
hmac = "0.12"
hkdf = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
sha1 = "0.10"

# local
gc_coreform = { path = "../gc_coreform" }
gc_kernel = { path = "../gc_kernel" }
gc_prelude = { path = "../gc_prelude", default-features = false }
gc_effects = { path = "../gc_effects" }
gc_obligations = { path = "../gc_obligations" }
gc_patches = { path = "../gc_patches" }
gc_types = { path = "../gc_types" }
gc_opt = { path = "../gc_opt" }
gc_vcs = { path = "../gc_vcs" }
gc_pkg = { path = "../gc_pkg" }
gc_registry = { path = "../gc_registry" }

[dev-dependencies]
serde_json.workspace = true
blake3.workspace = true
