[package]
name = "gc_cli_driver_parity"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "../gc_cli_driver/src/lib.rs"

[features]
default = ["parity-harness"]
parity-harness = []
embedded-bootstrap = ["gc_prelude/embedded-bootstrap"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

# local
gc_coreform = { path = "../gc_coreform" }
gc_kernel = { path = "../gc_kernel" }
gc_prelude = { path = "../gc_prelude", default-features = false }
gc_effects = { path = "../gc_effects" }
gc_obligations = { path = "../gc_obligations" }
gc_patches = { path = "../gc_patches" }
gc_types = { path = "../gc_types" }
gc_opt = { path = "../gc_opt" }
gc_vcs = { path = "../gc_vcs" }
gc_pkg = { path = "../gc_pkg" }
gc_registry = { path = "../gc_registry" }

[dev-dependencies]
serde_json.workspace = true
blake3.workspace = true
