[package]
name = "gc_effects"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

# local
gc_coreform = { path = "../gc_coreform" }
gc_kernel = { path = "../gc_kernel" }
gc_prelude = { path = "../gc_prelude", default-features = false }
gc_vcs = { path = "../gc_vcs" }
gc_pkg = { path = "../gc_pkg" }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
fs2 = "0.4"
gc_registry = { path = "../gc_registry" }

[dev-dependencies]
proptest = "1"
tempfile = "3"
ed25519-dalek.workspace = true
rand_core.workspace = true
base64ct.workspace = true
serde_json.workspace = true
