[package]
name = "gc_effects"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
gpu-device-backend = ["dep:bytemuck", "dep:pollster", "dep:wgpu"]
gfx-desktop-backend = ["dep:minifb"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
sha2.workspace = true
semver.workspace = true

# local
gc_coreform = { path = "../gc_coreform" }
gc_kernel = { path = "../gc_kernel" }
gc_prelude = { path = "../gc_prelude", default-features = false }
gc_vcs = { path = "../gc_vcs" }
gc_pkg = { path = "../gc_pkg" }
gc_registry = { path = "../gc_registry" }
gc_opt = { path = "../gc_opt" }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
fs2 = "0.4"
crossterm = "0.28"
notify = "6"
bytemuck = { version = "1", optional = true }
pollster = { version = "0.3", optional = true }
wgpu = { version = "0.20", optional = true }
minifb = { version = "0.27", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"
ed25519-dalek.workspace = true
rand_core.workspace = true
base64ct.workspace = true
serde_json.workspace = true
