[package]
name = "gc_kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true
stacker.workspace = true
rust-cc.workspace = true

# local
gc_coreform = { path = "../gc_coreform" }
