[package]
name = "gc_obligations"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
base64ct.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
zeroize.workspace = true

# local
gc_coreform = { path = "../gc_coreform" }
gc_kernel = { path = "../gc_kernel" }
gc_prelude = { path = "../gc_prelude" }
gc_effects = { path = "../gc_effects" }
gc_types = { path = "../gc_types" }
gc_opt = { path = "../gc_opt" }

[dev-dependencies]
tempfile = "3"
