[package]
name = "gc_opt"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
egg.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true
wasm-encoder.workspace = true
wasmi.workspace = true
serde_json.workspace = true

# local
gc_coreform = { path = "../gc_coreform" }
gc_kernel = { path = "../gc_kernel" }
gc_prelude = { path = "../gc_prelude", default-features = false }

[dev-dependencies]
proptest = "1"
