[package]
name = "gc_patches"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
num-traits.workspace = true
base64 = "0.22"

# local
gc_coreform = { path = "../gc_coreform" }
gc_obligations = { path = "../gc_obligations" }
