[package]
name = "gc_patches"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
num-traits.workspace = true
base64 = "0.22"

# local
gc_coreform = { path = "../gc_coreform" }
gc_obligations = { path = "../gc_obligations" }
gc_kernel = { path = "../gc_kernel" }
gc_prelude = { path = "../gc_prelude" }
gc_pkg = { path = "../gc_pkg" }

[dev-dependencies]
proptest = "1"
tempfile = "3"
