[package]
name = "gc_pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
gc_coreform = { path = "../gc_coreform" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
