[package]
name = "gc_prelude"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
embedded-bootstrap = []

[dependencies]
anyhow.workspace = true
blake3.workspace = true
once_cell.workspace = true
thiserror.workspace = true

# local
gc_coreform = { path = "../gc_coreform" }
gc_kernel = { path = "../gc_kernel" }

[dev-dependencies]
gc_effects = { path = "../gc_effects" }
gc_types = { path = "../gc_types" }
gc_opt = { path = "../gc_opt" }
tempfile = "3"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true

[build-dependencies]
toml.workspace = true
