[package]
name = "gc_registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

# local
gc_vcs = { path = "../gc_vcs" }
gc_coreform = { path = "../gc_coreform" }

