[package]
name = "gc_registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# local (used for file:// registry policy gating)
gc_coreform = { path = "../gc_coreform" }
gc_vcs = { path = "../gc_vcs" }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
fs2 = "0.4"
