[package]
name = "gc_runtime_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
gc_coreform = { path = "../gc_coreform" }
gc_effects = { path = "../gc_effects" }
gc_kernel = { path = "../gc_kernel" }
gc_obligations = { path = "../gc_obligations" }
gc_patches = { path = "../gc_patches" }
gc_prelude = { path = "../gc_prelude" }
gc_registry = { path = "../gc_registry" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = "3"
