[package]
name = "gc_vcs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
base64ct.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
globset = "0.4"
num-traits.workspace = true
thiserror.workspace = true

# local
gc_coreform = { path = "../gc_coreform" }
