[package]
name = "gc_vcs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
base64ct.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
globset = "0.4"
num-traits.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# local
gc_coreform = { path = "../gc_coreform" }
