[package]
name = "gc_wasi_cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "genesis_wasi"
path = "src/main.rs"

[features]
default = []
embedded-bootstrap = ["gc_prelude/embedded-bootstrap"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
blake3.workspace = true

# local (pure kernel stack)
gc_coreform = { path = "../gc_coreform" }
gc_kernel = { path = "../gc_kernel" }
gc_prelude = { path = "../gc_prelude", default-features = false }
gc_effects = { path = "../gc_effects" }
gc_obligations = { path = "../gc_obligations" }
gc_opt = { path = "../gc_opt" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
