[package]
name = "gc_wasi_cli"
default-run = "genesis_wasi"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "genesis_wasi"
path = "src/main.rs"

[[bin]]
name = "genesis_wasi_parity"
path = "src/main_parity.rs"

[features]
default = []
embedded-bootstrap = ["gc_cli_driver/embedded-bootstrap"]

[dependencies]
gc_cli_driver = { path = "../gc_cli_driver" }
gc_cli_driver_parity = { path = "../gc_cli_driver_parity" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json.workspace = true
blake3.workspace = true
gc_coreform = { path = "../gc_coreform" }
gc_effects = { path = "../gc_effects" }
gc_vcs = { path = "../gc_vcs" }
gc_registry = { path = "../gc_registry" }
