[package]
name = "gc_wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
embedded-bootstrap = ["gc_prelude/embedded-bootstrap"]

[dependencies]
wasm-bindgen = "0.2"
serde.workspace = true
blake3.workspace = true
serde-wasm-bindgen = "0.6"

# local
gc_coreform = { path = "../gc_coreform" }
gc_kernel = { path = "../gc_kernel" }
gc_prelude = { path = "../gc_prelude", default-features = false }
gc_opt = { path = "../gc_opt" }

[dev-dependencies]
gc_effects = { path = "../gc_effects" }
