[package]
name = "genesis-evidence-verifier"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
default-run = "genesis-evidence-verifier"

[workspace]

[dependencies]
base64 = "=0.22.1"
ed25519-dalek = "=2.2.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
